--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "kyslik/column-sortable": "^6.5",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/eloquent-sortable": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
